--- a/favorites-Sample.ini
+++ b/favorites-Sample.ini
@@ -88,6 +88,9 @@ cmd[] = "rpt cmd %node% ilink 3 47970"
 label[] = "W4KEV/ R 145.370 Knoxville, TN 50015"
 cmd[] = "rpt cmd %node% ilink 3 50015"
 
+label[] = "W6CDW 144.895 +, ELSINORE PEAK, CA 502500"
+cmd[] = "rpt cmd %node% ilink 3 502500"
+
 label[] = "W6EK 145.430, Auburn, CA 51018"
 cmd[] = "rpt cmd %node% ilink 3 51018"
 
