--- a/docs/rpt.conf
+++ b/docs/rpt.conf
@@ -12,6 +12,9 @@ voxtimeout = 30000
 
 ; Add under autopatch section to support AllScan DTMF commands in extensions.conf
 69 = autopatchup,context=my-ip,noct=1,farenddisconnect=1,dialtime=9000,quiet=1
+; After installing/updating AllScan copy the files as follows:
+; sudo cp /var/www/html/allscan/_tools/agi-bin/* /usr/share/asterisk/agi-bin/
+; sudo chmod 775 /usr/share/asterisk/agi-bin/*.sh
 
 921 = cop,21         ; Enable Parrot Mode
 922 = cop,22         ; Disable Parrot Mode
