--- a/docs/extensions.conf
+++ b/docs/extensions.conf
@@ -44,7 +44,7 @@ exten => 5,n,Hangup
 
 ; *698: Announce LAN IP Address & mDNS URL using asl-tts
 exten => 8,1,Wait(1)
-exten => 8,n,AGI(sayip.php,${NODE})
+exten => 8,n,AGI(sayip.sh,${NODE})
 exten => 8,n,Hangup
 
 ; *699: Play test file
