--- a/docs/extensions.conf
+++ b/docs/extensions.conf
@@ -43,8 +43,7 @@ exten => 5,n,AGI(poweroff.sh)
 exten => 5,n,Hangup
 
 ; *698: Announce LAN IP Address & mDNS URL using asl-tts
-exten => 8,1,Wait(1)
-exten => 8,n,AGI(sayip.sh,${NODE})
+exten => 8,1,AGI(sayip.sh,${NODE})
 exten => 8,n,Hangup
 
 ; *699: Play test file
