--- a/docs/rpt.conf
+++ b/docs/rpt.conf
@@ -1,6 +1,6 @@
 ; Generally recommended rpt.conf settings for most nodes
 hangtime = 100
-althangtime = 200 
+althangtime = 200
 ;linkunkeyct = ct8
 holdofftelem = 1
 telemdefault = 0
@@ -12,9 +12,19 @@ voxtimeout = 30000
 
 ; Add under autopatch section to support AllScan DTMF commands in extensions.conf
 69 = autopatchup,context=my-ip,noct=1,farenddisconnect=1,dialtime=9000,quiet=1
+
 ; After installing/updating AllScan copy the files as follows:
 ; sudo cp /var/www/html/allscan/_tools/agi-bin/* /usr/share/asterisk/agi-bin/
 ; sudo chmod 775 /usr/share/asterisk/agi-bin/*.sh
+
+; Add the following lines in modules.conf
+; load = res_agi.so                  ; Asterisk Gateway Interface (AGI)
+; load = res_speech.so               ; Generic Speech Recognition API
+
+; Authorize Asterisk to execute poweroff/reboot cmds:
+; sudo visudo
+; Add at bottom:
+; asterisk ALL = NOPASSWD: /usr/sbin/poweroff, /usr/sbin/reboot
 
 921 = cop,21         ; Enable Parrot Mode
 922 = cop,22         ; Disable Parrot Mode
