--- a/favorites-Sample.ini
+++ b/favorites-Sample.ini
@@ -121,6 +121,9 @@ cmd[] = "rpt cmd %node% ilink 3 48752"
 label[] = "WB9YPA/R 223.980 (-1.6MHz), South Bend, Indiana 51560"
 cmd[] = "rpt cmd %node% ilink 3 51560"
 
+label[] = "WM9W Chicago 458800"
+cmd[] = "rpt cmd %node% ilink 3 458800"
+
 label[] = "WW7PSR 146.960 Seattle, WA 2462"
 cmd[] = "rpt cmd %node% ilink 3 2462"
 
