--- a/docs/rpt.conf
+++ b/docs/rpt.conf
@@ -1,33 +1,37 @@
 ; Generally recommended rpt.conf settings for most nodes
-hangtime = 100
-althangtime = 200
-;linkunkeyct = ct8
+; Make these additions/changes in /etc/asterisk/rpt.conf
+hangtime = 200
+althangtime = 400
+;linkunkeyct = ct8		; Comment out to prevent courtesy tones when connected
 holdofftelem = 1
-telemdefault = 0
-parrotmode = 1
+telemdefault = 0		; Prevent "Node X connected to Node Y" messages
 
 ; Under node# section
 startup_macro = *698	; Announce LAN IP and mDNS URL
-voxtimeout = 30000
+voxtimeout = 30000		; Prevents Text-To-Speech timeouts on simplex nodes
 
+; Add under [functions] section
 ; Add under autopatch section to support AllScan DTMF commands in extensions.conf
 69 = autopatchup,context=my-ip,noct=1,farenddisconnect=1,dialtime=9000,quiet=1
-
-; After installing/updating AllScan copy the files as follows:
-; sudo cp /var/www/html/allscan/_tools/agi-bin/* /usr/share/asterisk/agi-bin/
-; sudo chmod 775 /usr/share/asterisk/agi-bin/*.sh
-
-; Add the following lines in modules.conf
-; load = res_agi.so                  ; Asterisk Gateway Interface (AGI)
-; load = res_speech.so               ; Generic Speech Recognition API
-
-; Authorize Asterisk to execute poweroff/reboot cmds:
-; sudo visudo
-; Add at bottom:
-; asterisk ALL = NOPASSWD: /usr/sbin/poweroff, /usr/sbin/reboot
 
 921 = cop,21         ; Enable Parrot Mode
 922 = cop,22         ; Disable Parrot Mode
 
 961 = cop,61         ; Send Message to USB to control GPIO pins (cop,61,GPIO1=0[,GPIO4=1]...)
 962 = cop,62         ; Send Message to USB to control GPIO pins, quietly (cop,62,GPIO1=0[,GPIO4=1]...)
+
+; DTMF Command Support - As provided with AllScan nodes
+; The AllScan install/update script copies all needed DTMF support files as follows:
+; sudo cp /var/www/html/allscan/_tools/agi-bin/* /usr/share/asterisk/agi-bin/
+; sudo chmod 775 /usr/share/asterisk/agi-bin/*.sh
+
+; Add the following lines in modules.conf (without the ';' in front)
+; load = res_agi.so                  ; Asterisk Gateway Interface (AGI)
+; load = res_speech.so               ; Generic Speech Recognition API
+
+; Authorize Asterisk to execute poweroff/reboot cmds:
+; sudo visudo
+; Add at bottom (without the ';' in front)
+; asterisk ALL = NOPASSWD: /usr/sbin/poweroff, /usr/sbin/reboot
+
+; Then add the content of extensions.conf to /etc/asterisk/extensions.conf
